modifiche in corso d'opera su css e html

--- a/css/index.css
+++ b/css/index.css
@@ -10,10 +10,11 @@ body {
 
 .login-container {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 50px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
+    text-align: center;
 }
 
 h2 {
